--- a/RegistroDeCompetenciaBash.csproj
+++ b/RegistroDeCompetenciaBash.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
-    <PackageReference Include="EPPlus" Version="4.5.3.2"/>
+    <PackageReference Include="EPPlus" Version="4.5.3.2" />
+    <PackageReference Include="Dapper" Version="2.0.4" />
+    <PackageReference Include="Npgsql" Version="4.1.2" />
   </ItemGroup>
 </Project>
